# school-telegram-bot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
bot/: main.py
bot/database/: __init__.py  main.py  methods.py  schedules.json  user_data.json
bot/handlers/: main.py
bot/handlers/admin/: main.py
bot/handlers/user/: basic_cmd.py  callback.py  main.py  other.py  schedule.py
bot/keybords/: inline.py
bot/misc/: __init__.py  text.py  utils.py
bot/state/: main.py
docs/: Рудичев.pptx
src/bot/: __main__.py
src/bot/db/: enums.py  main.py  methods.py  models.py
src/bot/filters/: __init__.py  role_filters.py
src/bot/handlers/: main.py
src/bot/handlers/admin/: alerts.py  main.py  refresh_schedule.py  user_management.py
src/bot/handlers/beta_tester/: main.py  test_function.py
src/bot/handlers/user/: basic_cmd.py  callback.py  main.py  other.py  schedule.py
src/bot/keybords/: inline.py
src/bot/misc/: __init__.py  state.py  utils.py
src/resources/: application.py  application_texts.py  schedules.json
