[tool.poetry]
name = "school telegram bot"
version = "0.1.0"
description = "Телеграмм бот для просмотра расписания"
authors = ["Petr Rudichev <petrrudichev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.38"
aiogram = "^3.18.0"
from-root = "^1.3.0"
gspread = "^6.1.4"
oauth2client = "^4.1.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.9.2"
isort = "^5.13.2"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
